--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: openjdk8
+      java: corretto17
     commands:
       - echo  "Install Phase - using Open JDK 8"
   pre_build:
@@ -18,4 +18,5 @@ phases:
       - echo "Post Build phase -  No commands to execute"
 artifacts:
   files:
-    - 'target/usermgmt-react-backend-springboot-0.0.1-SNAPSHOT.jar'  
+    - 'target/eb-usermgmt-mysql-v1.jar'
+  discard-paths: yes
